# CornersGame

./: CMakeLists.txt  Mechanic.cpp  Mechanic.h
src/: Game.java  GameMenu.java  Main.java  Mechanic.h  Mechanic.java
